# diffcp

./: .gitignore  README.md  REPRODUCING.md  diffcp_v2.py  pyproject.toml
benchmarks/: bench_coloring.py  bench_gpu_crossover.py  bench_nqueens.py  bench_rounding_gap.py  results_gpu_crossover.json  results_nqueens_v1.json
diffcp/: __init__.py  augmented_lagrangian.py  constraints.py  iterative_solver.py  model.py  rounding.py  solver.py
docs/: full_analysis.html  paper.html  paper_plan.md  paper_sec1_2.md  paper_sec3.md  paper_sec4_5_6.md
examples/: nqueens_demo.py
