[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "diffcp-solver"
version = "0.1.0"
description = "GPU-accelerated constraint programming via differentiable Sinkhorn relaxation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
benchmark = ["ortools>=9.0"]
all = ["ortools>=9.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["diffcp*"]
